tests/algorithms/x/Java/graphs/kahns_algorithm_topo.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden436_kahns_algorithm_topo3211127519/001/Main.java:14: error: incompatible types: Object cannot be converted to int
indegree[v] = indegree[v] + 1;
         ^
/tmp/TestJavaTranspiler_Algorithms_Golden436_kahns_algorithm_topo3211127519/001/Main.java:14: error: incompatible types: Object cannot be converted to int
indegree[v] = indegree[v] + 1;
                       ^
2 errors
